# xenonite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
engine/socraticode/: .editorconfig  .socraticodecontextartifacts.json.example  .socraticodeignore.example  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE-COMMERCIAL  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-LICENSES  biome.json  docker-compose.yml  glama.json  package-lock.json  package.json  server.json  vitest.config.ts
engine/socraticode/.claude-plugin/: marketplace.json  plugin.json
engine/socraticode/.codex-plugin/: plugin.json
engine/socraticode/.cursor-plugin/: plugin.json
engine/socraticode/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
engine/socraticode/.github/workflows/: ci.yml
engine/socraticode/agents/: codebase-explorer.md
engine/socraticode/extension/: README.md  package.json
engine/socraticode/scripts/: benchmark-graph.ts  copy-assets.mjs
engine/socraticode/skills/codebase-exploration/: SKILL.md
engine/socraticode/src/: config.ts  constants.ts
engine/socraticode/src/assets/: viewer-app.js  viewer-styles.css  viewer-template.html
engine/socraticode/src/services/: code-graph.ts  context-artifacts.ts  ignore.ts  (+16 more)
scripts/: start-node22.mjs
src/: code.mjs  code_graph.rs  code_index.rs  config.mjs  config.rs  context.rs  core.mjs  main.rs  mcp-core.mjs  mcp-stdio.mjs  memory.mjs  memory.rs  rocky.mjs  rocky.rs  routes.rs  server.mjs  storage.rs  store.mjs
test/: memory.test.mjs
(+46 files in other folders)
