[package]
name = "xenonite"
version = "0.1.0"
edition = "2021"
description = "Xenonite always-on API daemon with embedded zvec storage."
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.7"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zvec = { version = "0.1", features = ["bundled"] }
